# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

ohos_prebuilt_etc("drawing_image_Copy_Drag") {
  source = "src/Copy_Drag.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Copy_One_Drag") {
  source = "src/Copy_One_Drag.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Forbid_Drag") {
  source = "src/Forbid_Drag.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Forbid_One_Drag") {
  source = "src/Forbid_One_Drag.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Mouse_Drag_Default") {
  source = "src/Mouse_Drag_Default.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Mouse_Drag_Cursor_Circle") {
  source = "src/Mouse_Drag_Cursor_Circle.png"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Move_Drag") {
  source = "src/Move_Drag.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Mouse_Drag_Magic_Default") {
  source = "src/Mouse_Drag_Magic_Default.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Copy_Drag_RTL") {
  source = "src/Copy_Drag_RTL.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Copy_One_Drag_RTL") {
  source = "src/Copy_One_Drag_RTL.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Forbid_Drag_RTL") {
  source = "src/Forbid_Drag_RTL.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Forbid_One_Drag_RTL") {
  source = "src/Forbid_One_Drag_RTL.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

ohos_prebuilt_etc("drawing_image_Move_Drag_RTL") {
  source = "src/Move_Drag_RTL.svg"
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
  relative_install_dir = "device_status/drag_icon"
}

group("device_status_drag_icon") {
  deps = [
    ":drawing_image_Copy_Drag",
    ":drawing_image_Copy_One_Drag",
    ":drawing_image_Forbid_Drag",
    ":drawing_image_Forbid_One_Drag",
    ":drawing_image_Mouse_Drag_Cursor_Circle",
    ":drawing_image_Mouse_Drag_Default",
    ":drawing_image_Mouse_Drag_Magic_Default",
    ":drawing_image_Move_Drag",
    ":drawing_image_Copy_Drag_RTL",
    ":drawing_image_Copy_One_Drag_RTL",
    ":drawing_image_Forbid_Drag_RTL",
    ":drawing_image_Forbid_One_Drag_RTL",
    ":drawing_image_Move_Drag_RTL",
  ]
}
