# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")

config("cooperate_params_config") {
  include_dirs = [
    "include",
    "${device_status_root_path}/utils/ipc/include",
  ]
}

config("cooperate_params_public_config") {
  include_dirs = [ "include" ]
}

ohos_source_set("cooperate_params") {
  sources = [ "src/cooperate_params.cpp" ]

  configs = [ ":cooperate_params_config" ]

  public_configs = [ ":cooperate_params_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
