# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")

config("params_public_config") {
  include_dirs = [ "include" ]
}

config("cooperate_params_config") {
  include_dirs = [
    "include",
    "cooperate/include",
    "${device_status_root_path}/utils/ipc/include",
  ]
}

ohos_source_set("cooperate_params") {
  sources = [ "cooperate/src/cooperate_params.cpp" ]

  configs = [ ":cooperate_params_config" ]

  public_configs = [ ":params_public_config" ]

  deps = [ "${device_status_utils_path}:devicestatus_util" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "image_framework:image_native",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}

config("drag_params_config") {
  include_dirs = [
    "include",
    "drag/include",
    "${device_status_root_path}/utils/ipc/include",
  ]
}

ohos_source_set("drag_params") {
  sources = [
    "drag/src/drag_params.cpp",
    "drag/src/drag_data_manager.cpp"
  ]

  configs = [ ":drag_params_config" ]

  public_configs = [ ":params_public_config" ]

  deps = [ "${device_status_utils_path}:devicestatus_util" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "image_framework:image_native",
    "input:libmmi-client",
    "hitrace:hitrace_meter",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
