# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

config("ipc_public_config") {
  include_dirs = [ "include" ]
}

config("ipc_config") {
  include_dirs = [
    "include",
    "${intention_root_path}/data/include",
    "${device_status_root_path}/utils/ipc/include",
  ]
}

ohos_source_set("intention_ipc") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "src/intention_proxy.cpp",
    "src/intention_stub.cpp",
  ]

  configs = [ ":ipc_config" ]

  public_configs = [ ":ipc_public_config" ]

  deps = [ "${device_status_utils_path}:devicestatus_util" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "image_framework:image_native",
    "ipc:ipc_core",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
