# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

ohos_shared_library("intention_service") {
  shlib_type = "sa"
  include_dirs = [
    "include",
    "${intention_root_path}/data/include",
    "${intention_root_path}/ipc/include",
    "${intention_root_path}/scheduler/device_manager/include",
    "${intention_root_path}/scheduler/plugin_manager/include",
    "${intention_root_path}/scheduler/task_scheduler/include",
    "${intention_root_path}/scheduler/timer_manager/include",
    "${intention_root_path}/utils/common/include",
  ]

  sources = [ "src/intention_service.cpp" ]

  deps = [
    "${device_status_root_path}/utils/ipc:devicestatus_ipc",
    "${device_status_utils_path}:devicestatus_util",
    "${intention_root_path}/ipc:intention_ipc",
    "${intention_root_path}/scheduler/plugin_manager:plugin_manager",
    "${intention_root_path}/scheduler/task_scheduler:task_scheduler",
    "${intention_root_path}/scheduler/timer_manager:timer_manager",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "safwk:system_ability_fwk",
  ]

  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}
