# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")

config("devicestatus_private_config") {
  include_dirs = [ "//utils/system/safwk/native/include" ]
}

config("devicestatus_public_config") {
  include_dirs = [
    "include",
    "${device_status_service_path}/native/include",
    "${device_status_frameworks_path}/js/napi/include",
  ]
}

ohos_shared_library("devicestatus_client") {
  sources = [
    "${device_status_frameworks_path}/native/src/devicestatus_client.cpp",
    "${device_status_frameworks_path}/native/src/devicestatus_callback_stub.cpp",
    "${device_status_frameworks_path}/native/src/devicestatus_srv_proxy.cpp"
  ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
    ":devicestatus_private_config",
    ":devicestatus_public_config",
  ]

  public_configs = [ ":devicestatus_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  part_name = "${device_status_part_name}"
}
