# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../device_status.gni")

config("drag_auth_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("drag_auth") {

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "src/drag_auth.cpp",
    "src/drag_security_manager.cpp",
  ]

  public_configs = [ ":drag_auth_public_config" ]

  defines = device_status_default_defines

  include_dirs = [
    "include",
    "${device_status_root_path}/utils/common/include",
    "${device_status_interfaces_path}/innerkits/interaction/include",
  ]
  
  deps = [
    "${device_status_utils_path}:devicestatus_util",
    "${device_status_root_path}/intention/prototype:intention_prototype",
    "${device_status_root_path}/utils/common:devicestatus_util",
  ]

  external_deps = [
    "hilog:libhilog",
    "input:libmmi-client",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared"
  ]

  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}
