# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

group("device_status_fuzztest") {
  testonly = true
  deps = []

  deps += [
    "adddraglistener_fuzzer:fuzztest",
    "devicegetcachestub_fuzzer:fuzztest",
    "devicestatusagent_fuzzer:fuzztest",
    "devicestatusclient_fuzzer:fuzztest",
    "devicesubscribestub_fuzzer:fuzztest",
    "deviceunsubscribestub_fuzzer:fuzztest",
    "getdragdata_fuzzer:fuzztest",
    "getdragtargetpid_fuzzer:fuzztest",
    "getshadowoffset_fuzzer:fuzztest",
    "getudkey_fuzzer:fuzztest",
    "handleallocsocketfd_fuzzer:fuzztest",
    "removedraglistener_fuzzer:fuzztest",
    "setdragwindowvisible_fuzzer:fuzztest",
    "startdrag_fuzzer:fuzztest",
    "stopdrag_fuzzer:fuzztest",
    "unregistercoordinationlistener_fuzzer:fuzztest",
    "updatedragstyle_fuzzer:fuzztest",
    "updateshadowpic_fuzzer:fuzztest",
  ]
  if (fusion_interaction_coordination) {
    deps += [
      "activatecoordination_fuzzer:fuzztest",
      "deactivatecoordination_fuzzer:fuzztest",
      "getcoordinationstate_fuzzer:fuzztest",
      "preparecoordination_fuzzer:fuzztest",
      "registercoordinationlistener_fuzzer:fuzztest",
      "unpreparecoordination_fuzzer:fuzztest",
    ]
  }
}
