# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")

config("devicestatus_util_private_config") {
  include_dirs = [ "${device_status_utils_path}/include" ]
}

config("devicestatus_util_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("devicestatus_util") {
  sources = [
    "src/util.cpp",
    "src/util_napi.cpp",
    "src/util_napi_error.cpp",
  ]

  configs = [ ":devicestatus_util_private_config" ]

  public_configs = [ ":devicestatus_util_public_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}

config("devicestatus_utils_config") {
  include_dirs = [
    "include",
    "//commonlibrary/c_utils/base/include",
  ]
}
