# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

config("devicestatus_util_private_config") {
  include_dirs = [
    ".",
    "include",
  ]
}

config("devicestatus_util_public_config") {
  include_dirs = [
    ".",
    "include",
    "${device_status_interfaces_path}/innerkits/interaction/include",
  ]
}

ohos_shared_library("devicestatus_util") {
  version_script = "libdevicestatus_util_map"
  sources = [
    "src/util.cpp",
    "src/util_napi.cpp",
    "src/util_napi_error.cpp",
    "src/utility.cpp",
    "src/drag_data_packer.cpp",
    "src/shadow_packer.cpp",
    "src/summary_packer.cpp"
  ]

  configs = [ ":devicestatus_util_private_config" ]

  public_configs = [ ":devicestatus_util_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "image_framework:image_native",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}

config("devicestatus_utils_config") {
  include_dirs = [
    ".",
    "include",
  ]
}
