# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

config("devicestatus_util_private_config") {
  include_dirs = [
    ".",
    "include",
  ]
}

config("devicestatus_util_public_config") {
  include_dirs = [
    ".",
    "include",
    "${device_status_interfaces_path}/innerkits/interaction/include",
  ]
}

ohos_shared_library("devicestatus_util") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  version_script = "libdevicestatus_util_map"
  sources = [
    "src/animation_curve.cpp",
    "src/cooperate_hisysevent.cpp",
    "src/drag_data_packer.cpp",
    "src/preview_style_packer.cpp",
    "src/util.cpp",
    "src/util_napi.cpp",
    "src/util_napi_error.cpp",
    "src/utility.cpp",
  ]

  configs = [ ":devicestatus_util_private_config" ]

  public_configs = [ ":devicestatus_util_public_config" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "image_framework:image_native",
    "init:libbegetutil",
    "napi:ace_napi",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}

config("devicestatus_utils_config") {
  include_dirs = [
    ".",
    "include",
  ]
}
