# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")

ohos_shared_library("devicestatus_ipc") {
  sources = [
    "src/circle_stream_buffer.cpp",
    "src/net_packet.cpp",
    "src/stream_buffer.cpp",
    "src/uds_client.cpp",
    "src/uds_session.cpp",
    "src/uds_socket.cpp",
  ]

  include_dirs = [ "include" ]
  deps = [ "//commonlibrary/c_utils/base:utils" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  configs = [ "${device_status_utils_path}:devicestatus_utils_config" ]
  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}

config("devicestatus_ipc_config") {
  include_dirs = [ "//base/msdp/device_status/utils/ipc/include" ]
}
