# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../device_status.gni")

config("devicestatus_ipc_private_config") {
  include_dirs = [ "include" ]
}

config("devicestatus_ipc_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("devicestatus_ipc") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "src/circle_stream_buffer.cpp",
    "src/net_packet.cpp",
    "src/stream_buffer.cpp",
    "src/stream_client.cpp",
    "src/stream_session.cpp",
    "src/stream_socket.cpp",
  ]

  configs = [ ":devicestatus_ipc_private_config" ]

  public_configs = [ ":devicestatus_ipc_public_config" ]

  deps = [ "${device_status_utils_path}:devicestatus_util" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "${device_status_subsystem_name}"
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "${device_status_part_name}"
}
