# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../device_status.gni")

config("json_parser_config") {
  include_dirs = [
    "${device_status_root_path}/utils/json_parser/include",
    "${device_status_root_path}/utils/common/include",
  ]
}
 
ohos_source_set("json_parser") {

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
 
  sources = [
    "${device_status_root_path}/utils/json_parser/src/json_parser.cpp",
  ]
 
  deps = [
    "${device_status_utils_path}:devicestatus_util",
  ]

  external_deps = [
    "c_utils:utils",
    "cJSON:cjson",
    "hilog:libhilog",
  ]
 
  public_configs = [ ":json_parser_config" ]
 
  part_name = "${device_status_part_name}"
  subsystem_name = "${device_status_subsystem_name}"
}